helm/scripts/values/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-2
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-staging
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - test.jamlab.com.au
    secretName: test-staging-letsencrypt
  rules:
  - host: test.jamlab.com.au
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
